--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -110,6 +110,10 @@ Show informational messages.
 .BI "\-o " float
 Smoothing factor (a float from 0 to 1).
 .TP
+.BI "\-a " bytes
+Use a fixed scale for the bytes modes specified in bytes per second.
+By default uses an automatic scale.
+.TP
 .BI "\-n " name
 Change the \fBWMND\fP class/title name (defaults to "wmnd").
 
