Pre-prelease lint.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 492]

--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -37,9 +37,9 @@ Select the interface to start with.
 .TP
 .BI "\-I " interface
 Interface/s to monitor. Defaults to all but lo and irda. Under linux
-(using the linux_proc driver, you can specify multiple interfaces
+(using the linux_proc driver) you can specify multiple interfaces
 separated by commas to force offline ones and combine them into
-a single instance).
+a single instance.
 .TP
 .BI "\-D " driver
 Specify a driver to use. Defaults to auto-probe.
