write_conf now writes only changed values. changed release to 0.4.9.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 506]

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+WMND 0.4.9
+----------------------------------------------------------------------
+
+	* The auto-generated wmndrc now only includes changed values.
+
 WMND 0.4.8
 ----------------------------------------------------------------------
 
