Fixed generic_snmp by probing both ifName and ifDescr (required for interoperation with Debian Sarge, closes #253109). Release bump to 0.4.10 and release notes.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 585]

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+WMND 0.4.10
+----------------------------------------------------------------------
+
+	* Fixed generic_snmp for old snmpd by probing both ifName and
+	ifDesc. --enable-snmp-descr is no longer needed.
+
 WMND 0.4.9
 ----------------------------------------------------------------------
 
