--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+WMND 0.4.11
+----------------------------------------------------------------------
+
+	* Édition spécial Parisienne!
+	* Added support for history zoom/inspection through trend.
+	See README for more details.
+
 WMND 0.4.10
 ----------------------------------------------------------------------
 
