--- a/README
+++ b/README
@@ -108,6 +108,11 @@ to the large gfx pixmap it keeps ;-). You can also use a
 keyboard+mouse shortcut (perhaps ALT+left-click) in your window
 manager to drag it around.
 
+If trend support is enabled (--enable-trend at configure time) and
+trend is installed, the history can be viewed and inspected more
+conveniently by clicking with the middle button on the scale meter.
+See the "trend" section below.
+
 -- Internals ---------------------------------------------------------
 Sending a SIGUSR1 (pkill -USR1 wmnd) to wmnd will make itself to
 restart the drivers subsystem. Drivers must be coded correctly to
@@ -433,3 +438,23 @@ three different packages of WMND, respectively:
 
 Finally, --enable-sine-dummy should be really a default :).
 
+-- Trend support -----------------------------------------------------
+If proper support has been compiled-in (with --enable-trend) and trend
+is installed[1], you can examine the current history in a larger
+window by clicking with the middle mouse button on the scale meter
+(the panel under the device name). A middle-click on the left side
+will inspect RX, TX on the right side. Bytes/Packets mode affects the
+counters involved.
+
+[1] http://www.yuv.info/~wavexx/hacks/trend/
+
+Upon click, WMND will execute trend as a separate process and feed the
+latest 59 sampled values to it.
+
+Since this feature requires additional software, it's disabled by
+default. Enabling trend support however does not cause any slow-down
+or runtime-dependencies so it's still safe to enable it in packages.
+If trend support is enabled but trend isn't installed, WMND will
+simply print a warning on the console when clicking.
+
+Any version of trend starting with Rev #11 21/09/2004 should work.
