--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+WMND 0.4.12
+----------------------------------------------------------------------
+
+	* Executed processes are no longer left as zombies.
+
 WMND 0.4.11
 ----------------------------------------------------------------------
 
