Solaris 7 build fixes.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1095]

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ WMND 0.4.12
 ----------------------------------------------------------------------
 
 	* Executed processes are no longer left as zombies.
+	* Solaris 7 build fixes.
 
 WMND 0.4.11
 ----------------------------------------------------------------------
